@@ -1,0 +1,6 @@
+/*****************************************************************
+ * This file is part of JustOS                                   *
+ * Copyright (C) 2020 Kurt M. Weber                              *
+ * Released under the stated terms in the file LICENSE           *
+ * See the file "LICENSE" in the source distribution for details *
+ *****************************************************************/
